Try to fix workflow after edits

--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1199,3 +1199,88 @@ year = {2015}
   language = {en},
   number = {2}
 }
+@article{Boettiger2015,
+  title = {An Introduction to {{Docker}} for Reproducible Research},
+  author = {Boettiger, Carl},
+  year = {2015},
+  month = jan,
+  volume = {49},
+  pages = {71--79},
+  issn = {0163-5980},
+  doi = {10.1145/2723872.2723882},
+  abstract = {As computational work becomes more and more integral to many aspects of scientific research, computational reproducibility has become an issue of increasing importance to computer systems researchers and domain scientists alike. Though computational reproducibility seems more straight forward than replicating physical experiments, the complex and rapidly changing nature of computer environments makes being able to reproduce and extend such work a serious challenge. In this paper, I explore common reasons that code developed for one research project cannot be successfully executed or extended by subsequent researchers. I review current approaches to these issues, including virtual machines and workflow systems, and their limitations. I then examine how the popular emerging technology Docker combines several areas from systems research - such as operating system virtualization, cross-platform portability, modular re-usable elements, versioning, and a `DevOps' philosophy, to address these challenges. I illustrate this with several examples of Docker use with a focus on the R statistical environment.},
+  file = {/home/alan/Zotero/storage/537ICY95/Boettiger - 2015 - An introduction to Docker for reproducible researc.pdf},
+  journal = {ACM SIGOPS Operating Systems Review},
+  language = {en},
+  number = {1}
+}
+@article{Lahnemann2020,
+  title = {Eleven Grand Challenges in Single-Cell Data Science},
+  author = {L{\"a}hnemann, David and K{\"o}ster, Johannes and Szczurek, Ewa and McCarthy, Davis J. and Hicks, Stephanie C. and Robinson, Mark D. and Vallejos, Catalina A. and Campbell, Kieran R. and Beerenwinkel, Niko and Mahfouz, Ahmed and Pinello, Luca and Skums, Pavel and Stamatakis, Alexandros and Attolini, Camille Stephan-Otto and Aparicio, Samuel and Baaijens, Jasmijn and Balvert, Marleen and de Barbanson, Buys and Cappuccio, Antonio and Corleone, Giacomo and Dutilh, Bas E. and Florescu, Maria and Guryev, Victor and Holmer, Rens and Jahn, Katharina and Lobo, Thamar Jessurun and Keizer, Emma M. and Khatri, Indu and Kielbasa, Szymon M. and Korbel, Jan O. and Kozlov, Alexey M. and Kuo, Tzu-Hao and Lelieveldt, Boudewijn P.F. and Mandoiu, Ion I. and Marioni, John C. and Marschall, Tobias and M{\"o}lder, Felix and Niknejad, Amir and Raczkowski, Lukasz and Reinders, Marcel and de Ridder, Jeroen and Saliba, Antoine-Emmanuel and Somarakis, Antonios and Stegle, Oliver and Theis, Fabian J. and Yang, Huan and Zelikovsky, Alex and McHardy, Alice C. and Raphael, Benjamin J. and Shah, Sohrab P. and Sch{\"o}nhuth, Alexander},
+  year = {2020},
+  month = dec,
+  volume = {21},
+  pages = {31},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-020-1926-6},
+  abstract = {The recent boom in microfluidics and combinatorial indexing strategies, combined with low sequencing costs, has empowered single-cell sequencing technology. Thousands\textemdash{}or even millions\textemdash{}of cells analyzed in a single experiment amount to a data revolution in single-cell biology and pose unique data science problems. Here, we outline eleven challenges that will be central to bringing this emerging field of single-cell data science forward. For each challenge, we highlight motivating research questions, review prior work, and formulate open problems. This compendium is for established researchers, newcomers, and students alike, highlighting interesting and rewarding problems for the coming years.},
+  file = {/home/alan/Zotero/storage/CR6KK5HU/Lähnemann et al. - 2020 - Eleven grand challenges in single-cell data scienc.pdf},
+  journal = {Genome Biology},
+  language = {en},
+  number = {1}
+}
+
+@article{Soneson2018,
+  title = {Bias, Robustness and Scalability in Single-Cell Differential Expression Analysis},
+  author = {Soneson, Charlotte and Robinson, Mark D},
+  year = {2018},
+  month = apr,
+  volume = {15},
+  pages = {255--261},
+  issn = {1548-7091, 1548-7105},
+  doi = {10.1038/nmeth.4612},
+  file = {/home/alan/Zotero/storage/BACKPF75/Soneson and Robinson - 2018 - Bias, robustness and scalability in single-cell di.pdf},
+  journal = {Nature Methods},
+  language = {en},
+  number = {4}
+}
+
+
+@article{Finak2015,
+  title = {{{MAST}}: A Flexible Statistical Framework for Assessing Transcriptional Changes and Characterizing Heterogeneity in Single-Cell {{RNA}} Sequencing Data},
+  shorttitle = {{{MAST}}},
+  author = {Finak, Greg and McDavid, Andrew and Yajima, Masanao and Deng, Jingyuan and Gersuk, Vivian and Shalek, Alex K. and Slichter, Chloe K. and Miller, Hannah W. and McElrath, M. Juliana and Prlic, Martin and Linsley, Peter S. and Gottardo, Raphael},
+  year = {2015},
+  month = dec,
+  volume = {16},
+  pages = {278},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-015-0844-5},
+  abstract = {Single-cell transcriptomics reveals gene expression heterogeneity but suffers from stochastic dropout and characteristic bimodal expression distributions in which expression is either strongly non-zero or non-detectable. We propose a two-part, generalized linear model for such bimodal data that parameterizes both of these features. We argue that the cellular detection rate, the fraction of genes expressed in a cell, should be adjusted for as a source of nuisance variation. Our model provides gene set enrichment analysis tailored to single-cell data. It provides insights into how networks of co-expressed genes evolve across an experimental treatment. MAST is available at https://github.com/RGLab/MAST.},
+  file = {/home/alan/Zotero/storage/QJSG7KQM/Finak et al. - 2015 - MAST a flexible statistical framework for assessi.pdf},
+  journal = {Genome Biology},
+  language = {en},
+  number = {1}
+}
+
+@article{Durinck2009,
+  title = {Mapping Identifiers for the Integration of Genomic Datasets with the {{R}}/{{Bioconductor}} Package {{biomaRt}}},
+  author = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
+  year = {2009},
+  month = aug,
+  volume = {4},
+  pages = {1184--1191},
+  issn = {1754-2189, 1750-2799},
+  doi = {10.1038/nprot.2009.97},
+  file = {/home/alan/Zotero/storage/YMJ6I3U9/Durinck et al. - 2009 - Mapping identifiers for the integration of genomic.pdf},
+  journal = {Nature Protocols},
+  language = {en},
+  number = {8}
+}
+
+@Article{Gu2016,
+  title = {Complex heatmaps reveal patterns and correlations in multidimensional genomic data},
+  author = {Zuguang Gu and Roland Eils and Matthias Schlesner},
+  journal = {Bioinformatics},
+  year = {2016},
+}
