--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -65,11 +65,14 @@ library("BiocStyle")
 on.bioc <- FALSE
 library("knitr")
 library("ggplot2")
+theme_set(theme_bw())
 # Use fig.width = 7 for html and fig.width = 6 for pdf
 fig.width <- ifelse(on.bioc, 7, 6)
 knitr::opts_chunk$set(
-  cache = TRUE, warning = FALSE, message = FALSE, error = FALSE,
-  cache.path = "cache/", fig.path = "figure/", fig.width = fig.width
+  warning = FALSE, message = FALSE, error = FALSE,
+  cache = FALSE,
+  # cache.path = "cache/",
+  fig.path = "figure/", fig.width = fig.width
 )
 ```
 
@@ -89,13 +92,17 @@ On the broadest level, this heterogeneity can reflect the presence of distinct
 cell subtypes or states. <!---, which could be characterised through 
 clustering [@Kiselev2019]. --->
 Alternatively, cell-to-cell expression heterogeneity can be due to gradual 
-changes along processes that evolve over time, such as development and differentiation. <!--- and that can be characterised 
+changes along processes that evolve over time, such as development and 
+differentiation. <!--- and that can be characterised 
 using pseudotime inference methods [@Saelens2019]. --->
 Several clustering and pseudotime inference methods have been developed to
 characterise these sources of heterogeneity [@Kiselev2019; @Saelens2019].
 However, there is a limited availability of computational tools tailored 
 to study more subtle variability within a seemingly homogeneous cell population. 
-This variability can be due to deterministic or stochastic events that regulate gene expression and, among others, has been reported to increase prior to cell phate decisions [@Mojtahedi2016] as well as throughout ageing [@Martinez-jimenez2017]. 
+This variability can be due to deterministic or stochastic events that regulate
+gene expression and, among others, has been reported to increase prior to cell
+fate decisions [@Mojtahedi2016] as well as throughout 
+ageing [@Martinez-jimenez2017]. 
 
 <!--- Describes aims for the workflow and introduces BASiCS ---> 
 This article complements existing scRNA-seq workflows based on the
@@ -114,7 +121,8 @@ heterogeneity of immune cells [@Martinez-jimenez2017].
 
 <!--- BASiCS downstream analyses within a single population --->
 Within a population of cells, `r Biocpkg("BASiCS")` decomposes the total 
-observed variability in expression measurements into technical and biological components [@Vallejos2015]. 
+observed variability in expression measurements into technical and biological 
+components [@Vallejos2015]. 
 This enables the identification of *highly variable genes* (HVGs) that capture
 the major sources of heterogeneity within the analysed cells [@Brennecke2013]. 
 HVG detection is often used as feature selection, to identify the input 
@@ -194,7 +202,7 @@ Finally, we provide two step-by-step case studies using naive CD4^+^ T cells
 All source code used to generate the results presented in this article is 
 available at [https://github.com/VallejosGroup/BASiCSWorkflow]. To ensure the 
 reproducibility of this workflow, the analysis environment and all software 
-dependencies are provided as a Docker [@Boettiger2014] image at: 
+dependencies are provided as a Docker [@Boettiger2015] image at: 
 [https://hub.docker.com/repository/docker/alanocallaghan/bocker].
 
 <!--- 
@@ -290,11 +298,13 @@ knitr::include_graphics("figure/Overview.png")
 ## Input data
 
 ```{r}
-library(SingleCellExperiment)
+library("SingleCellExperiment")
 ```
 
-Here, we use the `r Biocpkg("SingleCellExperiment")` package to convert an input matrix of raw read-counts (molecule counts for UMI-based protocols) into a 
-`SingleCellExperiment` object which can store scRNA-seq data and its associated metadata, such as gene- and cell-specific information. 
+Here, we use the `r Biocpkg("SingleCellExperiment")` package to convert an input
+matrix of raw read-counts (molecule counts for UMI-based protocols) into a 
+`SingleCellExperiment` object which can store scRNA-seq data and its associated 
+metadata, such as gene- and cell-specific information. 
 Moreover, when available, the same object can be used to store read-counts for 
 technical spike-in molecules (these can be accessed via the `altExp()` method).
 A major advantage of using a `SingleCellExperiment` object as the input for 
@@ -304,14 +314,14 @@ Bioconductor packages [@Amezquita2019].
 ## Quality control and exploratory analysis
 
 ```{r}
-library(scater)
-library(scran)
+library("scater")
+library("scran")
 ```
 
 An critical step in scRNA-seq analyses is to apply QC diagnostics, removing low
 quality samples that may distort downstream analyses. 
 Among others, QC can help to identify samples that contain broken cells, that 
-are empty or that contain multiple cells [@Ilicic2016classification]. 
+are empty or that contain multiple cells [@Ilicic2016]. 
 Moreover, lowly expressed genes for which less reliable information is 
 available are typically also removed. 
 The `OSCA` online book each provide an extensive overview on important aspects 
@@ -339,7 +349,8 @@ To derive gene-specific variability estimates that are not confounded by this
 overall trend, the `DM` function calculates the distance between gene-specific 
 squared coefficients of variation (CV$^2$) and a rolling median along the range
 of mean expression values [@Kolodziejczyk2015cell].
-DM estimates enable exploratory analyses of cell-to-cell heterogeneity, but a measure of uncertainty is not readily available. As such, gene-specific 
+DM estimates enable exploratory analyses of cell-to-cell heterogeneity, but a
+measure of uncertainty is not readily available. As such, gene-specific 
 downstream inference (e.g. differential variability testing) is precluded.
 
 <!-- I simplified this section to avoid too much mathematical formulation.
@@ -348,7 +359,7 @@ I think it is important to emphasise the intution/interpretation instead. -->
 ## Analysis of cell-to-cell transcriptional variability
 
 ```{r}
-library(BASiCS)
+library("BASiCS")
 ```
 
 The `r Biocpkg("BASiCS")` package uses a Bayesian hierarchical framework 
@@ -384,7 +395,8 @@ Parameter inference is implemented in the `BASiCS_MCMC` function using an
 adaptive Metropolis within Gibbs algorithm [@Roberts2009], whose convergence can
 be assessed using `BASiCS_EffectiveSize` and `BASiCS_DiagPlot`. 
 The output from `BASiCS_MCMC` is a `BASiCS_Chain` object, which can be used 
-for further downstream analyses. In particular, `BASiCS_DetectHVG` and `BASiCS_DetectLVG` can be respectively used to identify highly and lowly 
+for further downstream analyses. In particular, `BASiCS_DetectHVG` and 
+`BASiCS_DetectLVG` can be respectively used to identify highly and lowly 
 variable genes within a cell population. Moreover, `BASiCS_TestDE` is used to
 perform differential mean and variability analyses between groups of cells.
 
@@ -441,23 +453,8 @@ effective sample size generated by the MCMC samplers. --->
 
 ## Other steps [title tbc]
 
-The `r Biocpkg("goseq")` Bioconductor package offers functions to detect the 
-enrichment of gene ontologies (GOs) among user-specified gene sets [@Young2010].
-Furthermore, `goseq` corrects for gene length biases, which is useful for full 
-length scRNA-seq data as highlighted in the first section. 
-In this workflow, we will use `goseq` to detect GO enrichment among 
-differentially expressed sets of genes.
 
-For downstream analysis, such as GO enrichment analysis or the biological 
-interpretation of individual genes, we need to (i) link each gene's ID to its 
-symbol and (ii) calculate each gene's length.
-For the first task, the `r Biocpkg("biomaRt")` Bioconductor package annotates a 
-wide range of gene and gene product identifiers [@Durinck2005] by accessing the 
-BioMart software suite ([http://www.biomart.org](http://www.biomart.org)).
-We can use `biomaRt` to link the **Mus musculus** gene IDs and to their gene 
-symbols (also referred to as 'gene name'): 
-
-```{r libraries}
+```{r libraries, eval=FALSE}
 library("ggplot2")
 library("viridis")
 library("biomaRt")
@@ -471,16 +468,48 @@ library("goseq")
 library("org.Mm.eg.db")
 library("data.table")
 library("ComplexHeatmap")
-library("ggpointdensity")
+
 
 ## Set theme for ggplot2 plots
 theme_set(theme_bw(base_size = 15))
 ## Directories to store downloaded files and intermediate results
-dir.create("rds", showWarnings = FALSE)
-dir.create("downloads", showWarnings = FALSE)
 ```
 
+The `r Biocpkg("goseq")` Bioconductor package offers functions to detect the 
+enrichment of gene ontologies (GOs) among user-specified gene sets [@Young2010].
+Furthermore, `goseq` corrects for gene length biases, which is useful for full 
+length scRNA-seq data as highlighted in the first section. 
+In this workflow, we will use `goseq` to detect GO enrichment among 
+differentially expressed sets of genes.
+
+
+--->
+
+
+## Gene annotation
+
+The molecule counts used in this workflow are annotated using Ensembl gene
+identifiers. In order to facilitate interpretation, it is often useful
+to generate a mapping from Ensembl gene IDs to 
+gene symbols using 
+In order to perform GO enrichment analysis, and to aid in the biological 
+interpretation of individual genes, we need to (i) link each gene's ID to its 
+symbol and (ii) calculate each gene's length.
+For the first task, the `r Biocpkg("biomaRt")` Bioconductor package annotates a 
+wide range of gene and gene product identifiers [@Durinck2005] by accessing the 
+BioMart software suite ([http://www.biomart.org](http://www.biomart.org))
+using the `r Biocpkg("biomaRt")` [@Durinck2009].
+
+For the second task, and to perform GO enrichment analysis, we further collected 
+the gene length for each gene. This can be extracted from the
+`r Biocpkg("EnsDb.Mmusculus.v79")` annotation package.
+This resource offers gene annotations such as exon positions and promoters for 
+the Ensembl database.
+
 ```{r obtain-gene-symbols}
+dir.create("rds", showWarnings = FALSE)
+dir.create("downloads", showWarnings = FALSE)
+
 if (!file.exists("rds/genenames.rds")) {
   # Initialize mart and dataset
   ensembl <- useMart(
@@ -499,15 +528,6 @@ if (!file.exists("rds/genenames.rds")) {
 } else {
   genenames <- readRDS("rds/genenames.rds")
 }
-```
-
-For the second task, and to perform GO enrichment analysis, we further collected 
-the gene length for each gene. This can be extracted from the
-`r Biocpkg("EnsDb.Mmusculus.v79")` annotation package.
-This resource offers gene annotations such as exon positions and promoters for 
-the Ensembl database.
-
-```{r gene-length}
 if (!file.exists("rds/genelength.rds")) {
   # Build exon list
   exons_list <- exonsBy(EnsDb.Mmusculus.v79, by = "gene")
@@ -528,7 +548,7 @@ genelength <- readRDS("rds/genelength.rds")
 genenames$gene_length <- genelength[genenames$ensembl_gene_id]
 ```
 
---->
+
 
 # Reproducibility
 
@@ -542,7 +562,8 @@ The following software versions were used throughout this workflow:
 `r packageVersion("scran")`, scater `r packageVersion("scater")`. Version 
 numbers for all remaining packages is available at [Session Info](#session-info).
 
-A Docker image containing all software requirements is available at [ADD LINK].
+A Docker image containing all software requirements is available at 
+[https://hub.docker.com/repository/docker/alanocallaghan/bocker].
 
 # C1 Fluidigm data: Analysis of naive CD4^+^ T cells {#Tcells}
 
@@ -672,7 +693,7 @@ Here, we visualise some of these metrics.
 # Calculate per cell QC metrics
 sce_naive_active <- addPerCellQC(sce_naive_active, use_altexps = TRUE)
 plotColData(sce_naive_active, x = "sum", y = "detected") +
-  xlab("Total number of reads (excludes non-mapped and intronic reads)") +
+  xlab("Number of mapped exonic reads") +
   ylab("Number of detected genes")
 ```
 
@@ -680,20 +701,24 @@ plotColData(sce_naive_active, x = "sum", y = "detected") +
 there are 3 cells with unusually large total endogenous reads. My suggestion is 
 to remove and retain the same QC as applied in the original study. ---> 
 
-<!---
 Another widely used QC diagnostic plot is to compare the total number (or 
 fraction) of spike-in counts versus the total number (or fraction) of 
-endogeneous counts (Figure \@ref(fig:ERCC-endogeneous)).
+endogeneous counts.
 In such a plot, low quality samples are characterised by a high fraction of 
 spike-in counts and a low fraction of endogeneous counts.
 
-```{r ERCC-endogeneous, fig.height=3, fig.width=3, fig.cap="The number of spike-in counts per cells is plotted against the number of endogeneous counts per cell. A dashed line indicates the minimum level of endogenous counts, below which cells are removed.", fig.pos='h', eval = FALSE}
+```{r ERCC, fig.height=3, fig.width=3, fig.cap="The number of spike-in counts per cells is plotted against the number of endogeneous counts per cell. Dashed lines indicates the minimum and maximum levels of endogenous counts, outside which cells are removed.", fig.pos='h', eval = FALSE}
+min_reads <- 600000
+max_reads <- 2300000
 plotColData(sce_naive_active, x = "sum", y = "altexps_spike-ins_sum") +
   xlab("Total number of reads (excludes non-mapped and intronic reads)") +
-  ylab("Total number of spike-in reads") + 
-  geom_vline(xintercept = 10^5.8, linetype = "dashed", colour = "grey60") 
+  ylab("Total number of spike-in reads")
 ```
 
+<!-- 
+   +
+  geom_vline(xintercept = min_reads, linetype = "dashed", colour = "grey60") +
+  geom_vline(xintercept = max_reads, linetype = "dashed", colour = "grey60")
 Since we are lacking the information of the total reads per cell (including the 
 non-mapped and intronic reads), we can solely filter cells based on the total 
 number of endogeneous counts (assuming equal numbers of spike-in molecules per 
@@ -702,12 +727,11 @@ reads mapping to endogeneous genes. We indicate the threshold used for filtering
 on the plot using a dashed line.
 
 ```{r, eval = FALSE}
-# Remove two cells that appear to be outliers
-ind_retain <- log10(sce_naive_active$sum) > 5.8
+# Remove five cells that appear to be outliers
+ind_retain <- sce_naive_active$sum > min_reads & sce_naive_active$sum < max_reads
 sce_naive_active <- sce_naive_active[, ind_retain]
 ```
-
---->
+ -->
 
 These QC metrics can also be visualised with respect to cell-level metadata.
 For example, the following figures show how these metrics relate to the 
@@ -717,22 +741,28 @@ from which cells were collected.
 ```{r}
 p_stimulus <- plotColData(sce_naive_active, x = "sum", y = "detected", 
                           colour_by = "Stimulus") +
-  xlab("Total number of reads (excludes non-mapped and intronic reads)") +
+  xlab("Number of mapped exonic reads") +
   ylab("Number of detected genes") +
-  ggtitle("Coloured according to experimental condition")
+  theme(
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1)) +
+  ggtitle("Experimental conditions")
 
 p_batch <- plotColData(sce_naive_active, x = "sum", y = "detected", 
                        colour_by = "Individuals") +
-  xlab("Total number of reads (excludes non-mapped and intronic reads)") +
+  xlab("Number of mapped exonic reads") +
   ylab("Number of detected genes") +
-  ggtitle("Coloured according to the source animal (batch)")
+  theme(
+    legend.position = "bottom",
+    axis.text.x = element_text(angle = 45, hjust = 1)) +
+  ggtitle("Source animals (batches)")
 
 multiplot(p_stimulus, p_batch, cols = 2)
 ```
 
 <!--- CV: not sure we need the PCA analysis here --->
 
-<!---
+
 
 ```{r pre-normalisation}
 # Normalisation
@@ -801,21 +831,21 @@ We detect a higher number of expressed genes and a higher total read count in
 activated cells. Furthermore, cells within each group show a wide distribution
 of these quality measures, without clear outlying cells.
 
---->
 
-<!--- CV: this text has not been edited ---> 
+
 #### Gene-level QC. 
-Prior to cell-specific quality control, we will remove all genes that are not
-detected in at least 2 cells across both conditions.
+Following cell-specific quality control, we will remove all genes that are not
+detected in at least 6 cells across both conditions.
 Furthermore, we remove genes that are not expressed with an average count of 1 
 across all cells.
 These thresholds need to be set specifically for each dataset, and careful
 gene-specific quality metrics need to be closely examined as suggested by the 
-`r Biocpkg("SimpleSingleCell")` Bioconductor workflow [@Lun2016].
+`r Biocpkg("SimpleSingleCell")` and [`OSCA`](https://osca.bioconductor.org/) 
+Bioconductor workflows [@Lun2016,@Amezquita2019].
 
 ```{r gene-selection}
 # Remove genes
-ind_expressed <- rowSums(counts(sce_naive_active) > 0) >= 2 &
+ind_expressed <- rowSums(counts(sce_naive_active) > 0) >= 5 &
   rowMeans(counts(sce_naive_active)) >= 1
 sce_naive_active <- sce_naive_active[ind_expressed, ]
 ```
@@ -835,6 +865,11 @@ We will first download the concentration information.
 
 ```{r spike-in_download}
 # Read in the spike-in concentrations
+download_file <- function(file, website, folder, destfile = file) {
+  if (!file.exists(destfile)) {
+    download.file(paste0(website, folder, file), destfile)
+  }
+}
 website <- "https://assets.thermofisher.com/"
 folder <- "TFS-Assets/LSG/manuals/"
 file <- "cms_095046.txt"
@@ -1126,7 +1161,7 @@ BASiCS_DiagPlot(MCMC_naive, Param = "delta")
 # Convergence of residual over-dispersion parameters
 # Trace plot, sample histogram and autocorrelation
 plot(MCMC_naive, Param = "epsilon", Gene = 200)
-plot(MCMC_naive, Param = "epsilon", Gene = 9000)
+plot(MCMC_naive, Param = "epsilon", Gene = 8000)
 
 # Effective sample size
 BASiCS_DiagPlot(MCMC_naive, Param = "epsilon")
@@ -1224,10 +1259,12 @@ HVG <- BASiCS_DetectHVG(MCMC_naive, PercentileThreshold = 0.9)
 
 # Lowly variable genes
 LVG <- BASiCS_DetectLVG(MCMC_naive, PercentileThreshold = 0.1)
+HVG_table <- HVG@Table
+LVG_table <- LVG@Table
 ```
 
-This analysis results in the detection of *`r sum(HVG$Table$HVG)`*
-highly variable genes and *`r sum(LVG$Table$LVG)`*
+This analysis results in the detection of *`r sum(HVG_table$HVG)`*
+highly variable genes and *`r sum(LVG_table$LVG)`*
 lowly variable genes.
 
 The `Biocpkg("scran")` provides similar functions to detect HVGs and we can 
@@ -1239,13 +1276,10 @@ Afterwards, the `decomposeVar` function decomposes the gene-specific variance
 into a biological and technical component.
 
 ```{r HVG-LVG-scran}
-# Fit the mean-variance trend
-means <- rowMeans(logcounts(sce_naive))
-vars <- rowVars(logcounts(sce_naive))
-var_fit <- scran::fitTrendVar(means, vars)
-
 # Variance decomposition
-var_out <- scran::modelGeneVar(sce_naive)
+# var_out <- scran::modelGeneVar(sce_naive)
+var_out <- scran::modelGeneCV2(sce_naive)
+var_out <- var_out[HVG_table$GeneName, ]
 ```
 
 As proposed by `SimpleSingleCell` and by `OSCA`,
@@ -1254,35 +1288,38 @@ larger than 0.5, while controlling the FDR to 5% [@Lun2016;@Amezquita2019].
 We can then compare the the overlap of the HVG identified by scran and by BASiCS.
 
 ```{r scran-HVG}
-ind_hvg <- which(var_out$FDR <= 0.05 & var_out$bio >= 0.5)
+is_hvg <- var_out$ratio > 2 & var_out$FDR < 0.05
+# is_hvg <- var_out$FDR < 0.1
+ind_hvg <- which(is_hvg)
 hvg_out <- var_out[ind_hvg, ]
-hvg_out <- hvg_out[order(hvg_out$bio, decreasing = TRUE), ]
+hvg_out <- hvg_out[order(hvg_out$FDR), ]
 nrow(hvg_out)
 
 # Intersection between BASiCS and scran HVG
-length(intersect(rownames(hvg_out), HVG$Table$GeneName[HVG$Table$HVG]))
+length(intersect(rownames(hvg_out), HVG_table$GeneName[HVG_table$HVG]))
 
 # Compare BASiCS and scran results
-HVG_res <- paste(
-  HVG$Table$HVG, 
-  var_out[HVG$Table$GeneName, "FDR"] <= 0.05 &
-    var_out[HVG$Table$GeneName, "bio"] >= 0.5
+plot_data <- data.frame(
+  Mu = HVG_table$Mu,
+  Epsilon = HVG_table$Epsilon,
+  # HVG = HVG_res
+  BASiCS = ifelse(HVG_table$HVG, "HVG", "Not HVG"),
+  scran = ifelse(is_hvg, "HVG", "Not HVG")
 )
-
-ggplot() +
+plot_data <- plot_data[order(plot_data$scran, plot_data$BASiCS, decreasing=TRUE), ]
+plot_data$Status <- paste0(
+  "BASiCS: ", plot_data$BASiCS, "\n",
+  "scran: ", plot_data$scran, "\n")
+ggplot(plot_data) +
   geom_point(
-    data = data.frame(
-      Mu = HVG$Table$Mu,
-      Epsilon = HVG$Table$Epsilon,
-      HVG = HVG_res
-    ),
-    aes(log(Mu), Epsilon, colour = HVG)
+    aes(log(Mu), Epsilon, colour = Status),
+    alpha = 0.6
   )
 ```
 
-*`r length(intersect(rownames(hvg_out), HVG$Table$GeneName[HVG$Table$HVG]))`*
+*`r length(intersect(rownames(hvg_out), HVG_table$GeneName[HVG_table$HVG]))`*
 of the *`r nrow(hvg_out)`* HVGs of scran are among the
-*`r sum(HVG$Table$HVG)`*
+*`r sum(HVG_table$HVG)`*
 HVGs identified by BASiCS.
 
 ### Mean-variance trend
@@ -1326,8 +1363,12 @@ measures. For this analysis, we exclude genes that are not expressed in at
 least 2 cells.
 These genes can be identified in the 
 `displayChainBASiCS(MCMC_naive, Param = "epsilon")` to contain `NA`.
+We will use the `r CRANpkg("ggpointdensity")` to visualise the density of
+the genes along the axes of mean and variability.
 
 ```{r variability-measures}
+library("ggpointdensity")
+library("viridis")
 # Exclude ERCCs
 counts_denoised <- counts_denoised[!grepl("ERCC", rownames(counts_denoised)), ]
 
@@ -1682,15 +1723,20 @@ colour_map <- c(
   "ExcludedLowESS" = "grey60",
   "ExcludedByUser" = "grey80"
 )
-Test_DE$TableMean$ResultDiffMean <- factor(
-  Test_DE$TableMean$ResultDiffMean,
+
+BASiCS_PlotDE(Test_DE, Parameters = "Mean", Plots = "MA")
+BASiCS_PlotDE(Test_DE, Parameters = "Mean", Plots = "Volcano")
+
+TableMean <- format(Test_DE, Which = "Mean", Filter = FALSE)
+TableMean$ResultDiffMean <- factor(
+  TableMean$ResultDiffMean,
   levels = names(colour_map)
 )
-ord <- order(Test_DE$TableMean$ResultDiffMean, decreasing = TRUE)
-Test_DE$TableMean <- Test_DE$TableMean[ord, ]
+ord <- order(TableMean$ResultDiffMean, decreasing = TRUE)
+TableMean <- TableMean[ord, ]
 colour_scale <- scale_color_manual(values = colour_map)
 # Visualise MA plot
-ggplot(Test_DE$TableMean) +
+ggplot(TableMean) +
   geom_point(
     aes(log(MeanOverall), MeanLog2FC, colour = ResultDiffMean),
     shape = 16,
@@ -1698,7 +1744,7 @@ ggplot(Test_DE$TableMean) +
   ) +
   colour_scale
 # Visualise MA plot
-ggplot(Test_DE$TableMean) +
+ggplot(TableMean) +
   geom_point(
     aes(MeanLog2FC, ProbDiffMean, colour = ResultDiffMean),
     shape = 16,
@@ -1706,7 +1752,6 @@ ggplot(Test_DE$TableMean) +
   ) +
   colour_scale
 ```
-
 **TODO: we can also plot this using BASiCS_PlotDE**
 
 
@@ -1733,28 +1778,33 @@ Test_DE <- BASiCS_TestDE(
   CheckESS = TRUE,
   MinESS = 100
 )
-table(Test_DE$TableMean$ResultDiffMean)
+TableMean <- format(Test_DE, Which = "Mean", Filter = FALSE)
+TableDisp <- format(Test_DE, Which = "Disp", Filter = FALSE)
+table(TableMean$ResultDiffMean)
 ```
 
 In this case, this results in 
-`r sum(Test_DE$TableMean$ResultDiffMean=="ExcludedLowESS")` genes with low 
+`r sum(TableMean$ResultDiffMean=="ExcludedLowESS")` genes with low 
 effective sample size being excluded from differential mean expression tests
-and `r sum(Test_DE$TableDisp$ResultDiffDisp=="ExcludedLowESS")`
+and `r sum(TableDisp$ResultDiffDisp=="ExcludedLowESS")`
 genes being excluded from tests of differential over-dispersion.
 To understand the regulatory programmes that underlie T cell activation, a 
 variety of downstream analyses can be peformed using the differentially 
 expressed genes.
-Here, we highlight the use of gene ontology (GO) analysis to group genes that 
+
+
+<!-- Here, we highlight the use of gene ontology (GO) analysis to group genes that 
 are differentially expressed between naive and activated CD4^+^ T cells.
 For this, we use the Bioconductor `Biocpkg(goseq)` package and the 
 `Biocpkg(org.Mm.eg.db)` annotation package to test GO enrichment within 
 genes specifically expressed by naive or activated CD4^+^ T cells
 
 
-```{r go-analysis-naive}
+
+```{r go-analysis-naive, eval = FALSE}
 # Collect significan genes as 1 and all other as 0
-naive_genes <- as.integer(Test_DE$TableMean$ResultDiffMean == "Naive+")
-names(naive_genes) <- Test_DE$TableMean$GeneName
+naive_genes <- as.integer(TableMean$ResultDiffMean == "Naive+")
+names(naive_genes) <- TableMean$GeneName
 
 # Build a Null distribution by correcting the gene length bias
 pwf <- nullp(naive_genes, "mm10", "ensGene",
@@ -1771,7 +1821,7 @@ for (i in 1:nrow(naive_GO)) {
   genes <- unique(unlist(mget(allegs, org.Mm.egENSEMBL)))
   genes <- as.character(intersect(
     genes,
-    Test_DE$TableMean$GeneName[naive_genes == 1]
+    TableMean$GeneName[naive_genes == 1]
   ))
   all_genes[i] <- paste(genenames[genes, "external_gene_name"],
     collapse = ", "
@@ -1794,10 +1844,10 @@ to show higher expression in naive cells compared to activated CD4^+^ T cells.
 We can also test the enrichment of GO categories among genes that show 
 increased expression upon T cell activation.
 
-```{r go-analysis-active}
+```{r go-analysis-active, eval = FALSE}
 # Collect significan genes as 1 and all other as 0
-active_genes <- as.integer(Test_DE$TableMean$ResultDiffMean == "Active+")
-names(active_genes) <- Test_DE$TableMean$GeneName
+active_genes <- as.integer(TableMean$ResultDiffMean == "Active+")
+names(active_genes) <- TableMean$GeneName
 
 # Build a Null distribution by correcting the gene length bias
 pwf <- nullp(active_genes, "mm10", "ensGene",
@@ -1814,7 +1864,7 @@ for (i in 1:nrow(active_GO)) {
   genes <- unique(unlist(mget(allegs, org.Mm.egENSEMBL)))
   genes <- as.character(intersect(
     genes,
-    Test_DE$TableMean$GeneName[active_genes == 1]
+    TableMean$GeneName[active_genes == 1]
   ))
   all_genes[i] <- paste(genenames[genes, "external_gene_name"],
     collapse = ", "
@@ -1825,7 +1875,6 @@ active_GO$gene <- all_genes
 # Show GO categories
 head(active_GO$term, n = 10)
 ```
-
 Genes that are up-regulated upon activation are enriched for GO categories that
 are associated with translational and metabolic processes. 
 It has been shown that within the first 24 hours of T cell activation, cells 
@@ -1833,6 +1882,9 @@ start to up-regulate components involved in translation, ribosome biogenesis
 and profileration [@Tan2017;@Araki2017]. 
 This signature can be recovered by performing differential mean expression 
 analysis between naive and activated CD4^+^ T cells.
+ -->
+
+
 
 While other computational tools exist to perform differential mean expression
 analysis, we next want to highlight the use of BASiCS for differential 
@@ -1852,7 +1904,7 @@ low levels of stochastic expression.
 
 ```{r over-dispersion-testing}
 # Select genes that show expression in both conditions
-genes_select <- (Test_DE$TableMean$Mean1 > 1 & Test_DE$TableMean$Mean2 > 1)
+genes_select <- (TableMean$Mean1 > 1 & TableMean$Mean2 > 1)
 
 Test_DE_LFC0 <- BASiCS_TestDE(
   Chain1 = MCMC_naive,
@@ -1874,35 +1926,38 @@ and boxplots.
 
 ```{r over-dispersion-result}
 # Select genes with no changes in mean expression
-ind_nochange <- Test_DE_LFC0$TableMean$ResultDiffMean == "NoDiff"
+TableMean0 <- format(Test_DE_LFC0, Which = "Mean", Filter = FALSE)
+ind_nochange <- TableMean0$ResultDiffMean == "NoDiff"
+TableDisp0 <- format(Test_DE_LFC0, Which = "Disp", Filter = FALSE)
 
-# MA plot
-ggplot(Test_DE_LFC0$TableDisp[ind_nochange, ]) +
-  geom_point(
-    aes(
-      log(MeanOverall),
-      DispLog2FC,
-      colour = ResultDiffDisp
-    ),
-    shape = 16,
-    alpha = 0.5
-  ) +
-  scale_color_manual(
-    values = c(
-      "Naive+" = "dark blue",
-      "Active+" = "dark red",
-      "NoDiff" = "black"
-    )
-  )
+BASiCS_PlotDE(Test_DE_LFC0, Parameters = "Disp", Plot = "MA")
+# # MA plot
+# ggplot(TableDisp0[ind_nochange, ]) +
+#   geom_point(
+#     aes(
+#       log(TableMean0$MeanOverall[ind_nochange]),
+#       DispLog2FC,
+#       colour = ResultDiffDisp
+#     ),
+#     shape = 16,
+#     alpha = 0.5
+#   ) +
+#   scale_color_manual(
+#     values = c(
+#       "Naive+" = "dark blue",
+#       "Active+" = "dark red",
+#       "NoDiff" = "black"
+#     )
+#   )
 
 # Boxplot
-wilcox.test(Test_DE_LFC0$TableDisp$DispLog2FC[ind_nochange])
-boxplot(Test_DE_LFC0$TableDisp$DispLog2FC[ind_nochange],
+wilcox.test(TableDisp0$DispLog2FC[ind_nochange])
+boxplot(TableDisp0$DispLog2FC[ind_nochange],
   ylab = "LFC in over-dispersion", outline = FALSE
 )
 abline(a = 0, b = 0, lwd = 2, col = "dark red")
 
-wilcox.test(Test_DE_LFC0$TableDisp$DispLog2FC[ind_nochange])
+wilcox.test(TableDisp0$DispLog2FC[ind_nochange])
 ```
 
 With this analysis, we detect increased over-dispersion in naive CD4^+^ T cells
@@ -1923,7 +1978,7 @@ effective sample size:
 
 ```{r res-over-disp-filtering}
 # Remove lowly expressed genes
-low_expr <- !(Test_DE$TableMean$Mean1 < 1 & Test_DE$TableMean$Mean2 < 1)
+low_expr <- !(TableMean$Mean1 < 1 & TableMean$Mean2 < 1)
 
 # Genes to exclude
 genes_select <- low_expr
@@ -1957,21 +2012,23 @@ Epsilon values for genes that are not expressed in at least 2 cells per
 conditions are marked as `NA` and are therefore not being displayed.
 
 ```{r diff-res-plot}
+TableResDisp <- format(Test_DE, Which = "ResDisp", Filter = FALSE)
 colour_map <- c(
-  "Naive+" = "dark blue",
-  "Active+" = "dark red",
+  "Naive+" = "dodgerblue",
+  "Active+" = "firebrick",
   "NoDiff" = "black",
   "ExcludedByUser" = "grey",
   "ExcludedLowESS" = "grey80",
   "ExcludedFromTesting" = "grey50"
 )
-Test_DE$TableResDisp$ResultDiffResDisp <- factor(
-  Test_DE$TableResDisp$ResultDiffResDisp,
+BASiCS_PlotDE(Test_DE, Parameters = "ResDisp", Plot = "MA")
+TableResDisp$ResultDiffResDisp <- factor(
+  TableResDisp$ResultDiffResDisp,
   levels = names(colour_map)
 )
-ord <- order(Test_DE$TableResDisp$ResultDiffResDisp, decreasing = TRUE)
-Test_DE$TableResDisp <- Test_DE$TableResDisp[ord, ]
-ggplot(Test_DE$TableResDisp) +
+ord <- order(TableResDisp$ResultDiffResDisp, decreasing = TRUE)
+TableResDisp <- TableResDisp[ord, ]
+ggplot(TableResDisp) +
   geom_point(
     aes(
       x = log(MeanOverall),
@@ -1993,7 +2050,8 @@ We will further remove the genes that were excluded from the test and those
 that are not expressed in at least 2 cells in either condition.
 
 ```{r combine-results}
-res_df <- cbind(Test_DE$TableMean, Test_DE$TableResDisp[, -c(1, 2)])
+cols <- setdiff(colnames(TableResDisp), c("GeneName", "MeanOverall"))
+res_df <- cbind(TableMean, TableResDisp[, cols])
 ind_exclude <- res_df$ResultDiffResDisp == "ExcludedByUser" |
   res_df$ResultDiffResDisp == "ExcludedFromTesting"
 res_df <- res_df[!ind_exclude, ]
@@ -2003,6 +2061,8 @@ Next, we can visualise the regulation of each individual gene based on its
 changes in mean expression and expression variability.
 
 ```{r DV-DE-vis}
+BASiCS_PlotDE(Test_DE, Parameters = "ResDisp", Plot = "MA")
+
 res_df$ResultDiffMean[grep("Excluded", res_df$ResultDiffMean)] <- "NoDiff"
 res_df$ResultDiffResDisp[grep("Excluded", res_df$ResultDiffResDisp)] <- "NoDiff"
 ggplot(res_df) +
@@ -2012,13 +2072,17 @@ ggplot(res_df) +
       ResDispDistance,
       colour = interaction(ResultDiffMean, ResultDiffResDisp, sep = ", ")
     ),
-    alpha = 0.5,
+    alpha = 0.8,
     shape = 16
   ) +
-  scale_color_brewer(name = "Categories", palette = "Set1") +
+  scale_color_brewer(name = "Categories", palette = "Paired") +
   labs(x = bquote(log[2](FC)), y = "Difference in residual over-dispersion")
 ```
 
+
+
+
+<!-- 
 While we can now test each of the nine genesets for functional enrichment, here, 
 we are particularly interested in the set of genes that are up-regulated with 
 increased variability upon immune activation.
@@ -2029,7 +2093,7 @@ patterns in early CD4^+^ T cell activation.
 For this, we will first collect all immune response genes 
 (GO category: `GO:0006955`) using the `goseq` package.
 
-```{r variable-immune-response}
+```{r variable-immune-response, eval = FALSE}
 # Select immune response genes
 immun_allegs <- get("GO:0006955", org.Mm.egGO2ALLEGS)
 immun_genes <- unique(unlist(mget(immun_allegs, org.Mm.egENSEMBL)))
@@ -2039,7 +2103,7 @@ immun_names <- genenames[immun_genes, "external_gene_name"]
 Finally, we will find the subset of immune response genes that are 
 up-regulated and change in variability upon early immune activation.
 
-```{r overlap}
+```{r overlap, eval = FALSE}
 # Variable response genes
 ind_var_response <- res_df$ResultDiffMean == "Active+" &
   res_df$ResultDiffResDisp == "Active+"
@@ -2058,14 +2122,14 @@ var_response_genes <- genenames[
 intersect(var_response_genes, immun_names)
 ```
 
-**TODO: what about these genes?** Pou2f2 and Smad3 .
+**TODO: what about these genes?** Pou2f2 and Smad3.
 
 While immune activation induces large transcriptional shifts in CD4^+^ T cells,
-we will now exemplify the use of `BASiCS` on a system that shows more subtle
+we will now demonstrate the use of `BASiCS` on a system that shows more subtle
 transcriptional changes during differentiation.
 
 
-
+ -->
 
 # Differential testing using differentiating cells (two group, droplet-based example) {#droplet-data}
 
@@ -2098,14 +2162,7 @@ if (!file.exists("downloads/rawCounts.tsv")) {
   unzip(zipfile = "downloads/rawCounts.zip", exdir = "downloads")
   file.remove("downloads/rawCounts.zip")
 }
-rawCounts <- fread("downloads/rawCounts.tsv",
-  sep = "\t", header = FALSE,
-  data.table = FALSE
-)
-
-# Genenames are stored in first column
-rownames(rawCounts) <- rawCounts[, 1]
-rawCounts <- rawCounts[, -1]
+rawCounts <- read.delim("downloads/rawCounts.tsv", header = TRUE)
 ```
 
 *Of note:* The file is 65 MB in size while the unzipped, raw counts measure
@@ -2350,7 +2407,7 @@ For this, we compare over-dispersion parameters $\delta_i$ for genes that are
 similarly expressed in both conditions.
 
 ```{r drop_testde_lfc0}
-droplet_test_logFC0 <- BASiCS_TestDE(
+Droplet_Test_logFC0 <- BASiCS_TestDE(
   Chain1 = PSM_MCMC,
   Chain2 = SM_MCMC,
   EpsilonM = 0,
@@ -2361,8 +2418,9 @@ droplet_test_logFC0 <- BASiCS_TestDE(
   CheckESS = TRUE,
   MinESS = 100
 )
-not_excluded <- droplet_test_logFC0$TableDisp$ResultDiffDisp != "ExcludedFromTesting"
-for_plot <- droplet_test_logFC0$TableDisp[not_excluded, c("Disp1", "Disp2")]
+DropletTableDisp <- format(Droplet_Test_logFC0, Which = "Disp", Filter = FALSE)
+not_excluded <- DropletTableDisp$ResultDiffDisp != "ExcludedFromTesting"
+for_plot <- DropletTableDisp[not_excluded, c("Disp1", "Disp2")]
 for_plot <- reshape2::melt(for_plot)
 ggplot(for_plot) + geom_boxplot(aes(variable, log(value))) +
   scale_x_discrete(labels = c("PSM", "SM")) +
@@ -2379,7 +2437,7 @@ and the default threshold of $\psi_0\approx0.41$ for differential variability
 testing.
 
 ```{r droplet-gene-specific-testing}
-droplet_test <- BASiCS_TestDE(
+Droplet_Test <- BASiCS_TestDE(
   Chain1 = PSM_MCMC,
   Chain2 = SM_MCMC,
   EpsilonM = 1,
@@ -2400,8 +2458,10 @@ colour_map_sm <- c(
   "ExcludedByUser" = "grey80"
 )
 
+BASiCS_PlotDE(Droplet_Test, Parameter = "Mean", Plot = "MA")
+Droplet_TableMean <- format(Droplet_Test, Which = "Mean", Filter = FALSE)
 # Differential expression
-ggplot(droplet_test$TableMean) +
+ggplot(Droplet_TableMean) +
   geom_point(
     aes(log(MeanOverall), MeanLog2FC, colour = ResultDiffMean),
     shape = 16,
@@ -2413,8 +2473,11 @@ ggplot(droplet_test$TableMean) +
   ) +
   ylab(expression(mu[PSM] / mu[SM])) + xlab(expression(log(mu)))
 
+
+BASiCS_PlotDE(Droplet_Test, Parameter = "ResDisp", Plot = "MA")
+Droplet_TableResDisp <- format(Droplet_Test, Which = "ResDisp", Filter = FALSE)
 # Differential variability
-ggplot(droplet_test$TableResDisp) +
+ggplot(Droplet_TableResDisp) +
   geom_point(
     aes(log(MeanOverall), ResDispDistance, colour = ResultDiffResDisp),
     shape = 16,
@@ -2437,25 +2500,29 @@ types.
 
 ```{r gene-lists-mean}
 # Highly expressed in somitic mesoderm
-ind_sm <- droplet_test$TableMean$ResultDiffMean == "SM+"
-SM_mean <- droplet_test$TableMean[ind_sm, ]
+ind_sm <- Droplet_TableMean$ResultDiffMean == "SM+"
+SM_mean <- Droplet_TableMean[ind_sm, ]
 SM_mean <- SM_mean[order(SM_mean$MeanLog2FC, decreasing = FALSE), ]
 SM_mean$Symbol <- genenames[SM_mean$GeneName, 2]
 
 # Highly expressed in pre-somitic mesoderm
-ind_psm <- droplet_test$TableMean$ResultDiffMean == "PSM+"
-PSM_mean <- droplet_test$TableMean[ind_psm, ]
+ind_psm <- Droplet_TableMean$ResultDiffMean == "PSM+"
+PSM_mean <- Droplet_TableMean[ind_psm, ]
 PSM_mean <- PSM_mean[order(PSM_mean$MeanLog2FC, decreasing = TRUE), ]
 PSM_mean$Symbol <- genenames[PSM_mean$GeneName, 2]
 ```
 
+
+ 
 We can next perform GO analysis on up- or down-regulated genes. 
 First, we will perform GO analysis on somitic mesoderm specific genes.
+To do this, we will use the `r Biocpkg("goseq")`.
 
 ```{r GO-analysis-mean-SM}
+library("goseq")
 # Collect significan genes as 1 and all other as 0
-SM_genes <- as.integer(droplet_test$TableMean$ResultDiffMean == "SM+")
-names(SM_genes) <- droplet_test$TableMean$GeneName
+SM_genes <- as.integer(Droplet_TableMean$ResultDiffMean == "SM+")
+names(SM_genes) <- Droplet_TableMean$GeneName
 
 # Build a Null distribution by correcting the gene length bias
 pwf <- nullp(SM_genes, "mm10", "ensGene", bias.data = genelength[names(SM_genes)])
@@ -2478,8 +2545,8 @@ Now, we perform GO analysis on pre-somitic mesoderm specific genes
 
 ```{r GO-analysis-mean-PSM}
 # Collect significan genes as 1 and all other as 0
-PSM_genes <- as.integer(droplet_test$TableMean$ResultDiffMean == "PSM+")
-names(PSM_genes) <- droplet_test$TableMean$GeneName
+PSM_genes <- as.integer(Droplet_TableMean$ResultDiffMean == "PSM+")
+names(PSM_genes) <- Droplet_TableMean$GeneName
 
 # Build a Null distribution by correcting the gene length bias
 pwf <- nullp(
@@ -2503,6 +2570,7 @@ for (j in 1:nrow(PSM_GO)) {
 PSM_GO$Genes <- all_genes
 ```
 
+
 To visualise the expression of individual genes, we can use the `scater` package.
 
 ```{r plot-de-scater}
@@ -2516,12 +2584,15 @@ plotExpression(droplet_sce,
 plotReducedDim(droplet_sce,
   dimred = "PCA",
   colour_by = genenames[ind_fgf, 1]
-)
+) + scale_fill_viridis(name = genenames[ind_fgf, 2])
 ```
 
-We can also visualise one GO category in form of heatmap.
+We can also visualise one GO category in form of heatmap. We use
+`r Biocpkg("ComplexHeatmap")` to visualise the expression level for each
+cell of the genes annotated with GO terms [@Gu2016].
 
 ```{r gp-heatmap, fig.height = 7, fig.width = 5, cache = FALSE}
+library("ComplexHeatmap")
 genes <- unlist(strsplit(PSM_GO[1, "Genes"], ", "))
 for_heatmap <- logcounts(droplet_sce)[genes, ]
 colnames(for_heatmap) <- colData(droplet_sce)$cell
@@ -2569,13 +2640,13 @@ four categories. These include:
 
 ```{r diff-var-check}
 gene_groups <- data.frame(
-  Genename = droplet_test$TableResDisp$GeneName,
-  Symbol = genenames[droplet_test$TableResDisp$GeneName, 2],
-  MeanLog2FC = droplet_test$TableMean$MeanLog2FC,
-  ResDispDistance = droplet_test$TableResDisp$ResDispDistance,
+  Genename = Droplet_TableResDisp$GeneName,
+  Symbol = genenames[Droplet_TableResDisp$GeneName, 2],
+  MeanLog2FC = Droplet_TableMean$MeanLog2FC,
+  ResDispDistance = Droplet_TableResDisp$ResDispDistance,
   Regulation = paste(
-    droplet_test$TableMean$ResultDiffMean,
-    droplet_test$TableResDisp$ResultDiffResDisp,
+    Droplet_TableMean$ResultDiffMean,
+    Droplet_TableResDisp$ResultDiffResDisp,
     sep = "_"
   )
 )
